# django_rest_api

./: .flake8  .gitignore  README.md  pyproject.toml
django_api_rest/: db.sqlite3
django_api_rest/application/: admin.py  models.py  permissions.py  serializers.py  views.py
django_api_rest/application/migrations/: 0001_initial.py  0002_initial.py  0003_project_description_alter_issue_attribution_and_more.py
django_api_rest/django_api_rest/: asgi.py  settings.py  urls.py  wsgi.py
django_api_rest/users/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
django_api_rest/users/migrations/: 0001_initial.py
